# XWAction

./: MANIFEST.in  README.md  XWACTION_MODERNIZATION_PLAN.md  pyproject.toml  pyproject.xwaction.toml  pytest.ini  requirements.txt  test_auth_helpers.py  test_function_types.py
.github/: workflows-config.yaml
.github/workflows/: publish.yml
MIGRAT/xaction/: __init__.py  abc.py  errors.py  facade.py  model.py
MIGRAT/xaction/core/: __init__.py  config.py  context.py  execution.py  openapi.py  profiles.py  validation.py
MIGRAT/xaction/engines/: __init__.py  abc.py  celery.py  fastapi.py  native.py  prefect.py
MIGRAT/xaction/handlers/: __init__.py  abc.py  monitoring.py  security.py  validation.py  workflow.py
docs/: GUIDE_01_USAGE.md  INDEX.md  PROJECT_PHASES.md  README.md  REF_01_REQ.md  REF_11_COMP.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_50_QA.md  REF_51_TEST.md  REF_54_BENCH.md
docs/_archive/: README.md
docs/changes/: INVESTIGATION_FUNCTION_TYPES.md  MIGRAT_FEATURE_VERIFICATION.md  PROMPT_FIX_WEB_API_BOUND_METHODS.md  XWACTION_MODERNIZATION_PLAN.md
docs/logs/feedback/: INDEX.md
docs/logs/plans/: INDEX.md
docs/logs/releases/: INDEX.md
docs/logs/reviews/: REVIEW_20260207_164000_000_REQUIREMENTS.md  REVIEW_20260207_ARCHIVE_EXTRACTION_REF_AND_LOGS.md  REVIEW_20260207_GAP_DOCS_CODE_TESTS_EXAMPLES_BENCHMARKS.md  REVIEW_20260207_PROJECT_STATUS.md
docs/logs/tests/: INDEX.md  TEST_20260314_175942_081_SUMMARY.md  TEST_20260319_024126_666_SUMMARY.md  TEST_20260319_024459_348_SUMMARY.md  TEST_20260319_024600_650_SUMMARY.md  TEST_20260319_054113_656_SUMMARY.md  TEST_20260322_170340_816_SUMMARY.md  TEST_20260322_171725_976_SUMMARY.md  TEST_20260322_172748_012_SUMMARY.md  TEST_20260322_174725_422_SUMMARY.md  TEST_20260322_180620_950_SUMMARY.md  TEST_20260322_181441_189_SUMMARY.md  TEST_20260322_182328_563_SUMMARY.md  TEST_20260322_185723_382_SUMMARY.md  TEST_20260322_190841_929_SUMMARY.md  TEST_20260327_181703_835_SUMMARY.md  TEST_20260327_181805_973_SUMMARY.md  TEST_20260327_184859_559_SUMMARY.md  TEST_20260408_145324_161_SUMMARY.md
docs/tests/: README.md  TEST_20260313_023121_249_SUMMARY.md  TEST_20260314_180136_277_SUMMARY.md  TEST_20260314_181833_166_SUMMARY.md  TEST_20260319_023942_781_SUMMARY.md  TEST_20260319_054417_066_SUMMARY.md  TEST_20260319_062229_033_SUMMARY.md  TEST_20260322_173717_129_SUMMARY.md  TEST_20260322_175636_658_SUMMARY.md  TEST_20260322_183336_379_SUMMARY.md  TEST_20260322_184123_702_SUMMARY.md  TEST_20260322_184923_440_SUMMARY.md
examples/: README.md  authorization_example.py
examples/actions_json/: README.md  demo_load_actions.py  generate_actions_json.py
src/: xaction.py  xwaction.py
src/exonware/xaction/: __init__.py
src/exonware/xwaction/: __init__.py  action_utils.py  base.py  config.py  context.py  contracts.py  defs.py  errors.py  facade.py  http_annotations.py  registry.py
src/exonware/xwaction/common/: workflow_visualizer.py
src/exonware/xwaction/core/: __init__.py  execution.py  openapi.py  validation.py
src/exonware/xwaction/engines/: __init__.py  base.py  celery.py  contracts.py  defs.py  fastapi.py  flask.py  native.py  prefect.py
src/exonware/xwaction/handlers/: __init__.py  base.py  contracts.py  defs.py  monitoring.py  security.py  validation.py  workflow.py
tests/: __init__.py  conftest.py  runner.py  verify_installation.py
tests/0.core/: __init__.py  runner.py  test_action_utilities.py  test_core_facade.py  test_core_imports.py  test_core_wrapper_vs_execute.py
tests/1.unit/: __init__.py  runner.py  test_unit_action_exposure_policy.py  test_unit_config_profiles.py  test_unit_context.py  test_unit_engine_registry.py  test_unit_engines_matrix.py  test_unit_errors.py  test_unit_facade_to_native_roundtrip.py  test_unit_fastapi_intypes_form_params_regression.py  test_unit_fastapi_streaming.py  test_unit_handler_registry.py  test_unit_handlers_security_monitoring_workflow.py  test_unit_openapi_generator.py  test_unit_registry.py  test_unit_registry_filters_matrix.py  test_unit_validation_contracts.py
tests/1.unit/auth_tests/: test_auth_helpers.py
tests/1.unit/dev_tests/: test_function_types.py
tests/2.integration/: __init__.py  runner.py  test_integration_builtin_handlers.py  test_integration_engines_coverage.py  test_integration_execution_pipeline.py  test_integration_flask_engine.py  test_integration_registry_openapi_export.py  test_integration_workflow_handler_state.py
tests/3.advance/: __init__.py  runner.py  test_openapi_compliance.py  test_performance.py  test_security.py
