
# project-src-size=361574 ; 0.35 MB
# Source size (src/*): ~355.1 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwaction"
  dynamic = ["version"]
  description = "Action-based workflow and automation library"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["action", "workflow", "automation", "execution", "tasks", "exonware"]
  classifiers = []
  dependencies = [
    "exonware-xwdata",
    "exonware-xwjson",
    "exonware-xwquery",
    "exonware-xwschema",
    "exonware-xwsystem",
  ]
  # total = src + base deps; refresh via commands measure_dependency_sizes xwaction
  authors = [{ name = "eXonware Backend Team" }]

  [project.license]
    text = "Apache-2.0"

  [project.optional-dependencies]
    # First-party XW libs composed by this package (excludes exonware-xwsystem; see lazy/full).
    xw = [
      "exonware-xwdata",
      "exonware-xwjson",
      "exonware-xwquery",
      "exonware-xwschema",
    ]
    lazy = [
      "exonware-xwaction[xw]",
      "exonware-xwlazy",
      "exonware-xwsystem[lazy]",
      "exonware-xwdata[xw]",
      "exonware-xwjson[xw]",
      "exonware-xwquery[xw]",
      "exonware-xwschema[xw]",
    ]
    full = [
      "exonware-xwaction[xw]",
      "exonware-xwsystem[full]",
      "exonware-xwdata[xw]",
      "exonware-xwjson[xw]",
      "exonware-xwquery[xw]",
      "exonware-xwschema[xw]",
      "fastapi",
      "prefect",
      "unidecode",
    ]
    dev = [
      "exonware-xwaction[full]",
      "black>=23.0.0",
      "isort>=5.12.0",
      "mypy>=1.0.0",
      "pytest>=7.0.0",
      "pytest-asyncio>=0.21.0",
      "pytest-cov>=4.0.0",
    ]

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xwaction"
    Documentation = "https://github.com/exonware/xwaction#readme"
    Subtree = "https://github.com/exonware/xwaction.git"

[tool]
# Dependency sizes: run 'commands measure_dependency_sizes xwaction' to refresh

  [tool.black]
    line-length = 88
    target-version = ["py312"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "3.12"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      addopts = "-v --tb=short"
      markers = []

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwaction/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwaction"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
